<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_weight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleTitle" />

    <EditText
        android:id="@+id/editSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter song title here"
        android:inputType="text" />

    <TextView
        android:id="@+id/singerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singerTitle" />

    <EditText
        android:id="@+id/editSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter singers' name here"
        android:inputType="text" />

    <TextView
        android:id="@+id/yearTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yearTitle" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter year of release"
        android:inputType="text" />

    <TextView
        android:id="@+id/starTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starsTitle" />

    <RadioGroup
        android:id="@+id/ratingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rating1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberOne" />

        <RadioButton
            android:id="@+id/rating2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberTwo" />

        <RadioButton
            android:id="@+id/rating3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberThree" />

        <RadioButton
            android:id="@+id/rating4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberFour" />

        <RadioButton
            android:id="@+id/rating5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numberFive" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showList" />
    </LinearLayout>


</LinearLayout>